feat: token pair issuing
