# internal/handlers/auth_handler.go
@@ -1,7 +1,9 @@
 package handlers
 
 import (
+	"log"
 	"net/http"
+	"net/netip"
 
 	"github.com/gin-gonic/gin"
 	"github.com/kwinso/medods-test-task/internal/api"
@@ -12,12 +14,14 @@ import (
 type AuthHandler struct {
 	Config      config.Config
 	authService services.AuthService
+	logger      *log.Logger
 }
 
-func NewAuthHandler(cfg config.Config, authService services.AuthService) AuthHandler {
+func NewAuthHandler(cfg config.Config, authService services.AuthService, logger *log.Logger) AuthHandler {
 	return AuthHandler{
 		Config:      cfg,
 		authService: authService,
+		logger:      logger,
 	}
 }
 
@@ -25,23 +29,40 @@ func (h *AuthHandler) SetupRoutes(router *gin.Engine) {
 	router.POST("/login", h.Login)
 }
 
-// @BasePath /api/v1
-
-// PingExample godoc
-// @Summary ping example
+// @Summary	Generate a token pair from guid
 // @Schemes
-// @Description do ping
-// @Tags example
-// @Accept json
-// @Produce json
-// @Success 200 {string} Helloworld
-// @Router /example/helloworld [get]
+// @Description	do ping
+// @Param			request body api.LoginRequest true "login request"
+// @Accept			json
+// @Produce		json
+// @Success		200	{object}	api.TokenPair
+// @Router			/login [post]
 func (h *AuthHandler) Login(c *gin.Context) {
 	var req api.LoginRequest
 	if err := c.ShouldBind(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	h.authService.AuthorizeByGUID(req.GUID)
+	ua := c.Request.UserAgent()
+	ipString := c.ClientIP()
+	inet, err := netip.ParseAddr(ipString)
+	if err != nil {
+		h.logger.Printf("Failed to parse IP address: %v\n", err)
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	tokenPair, err := h.authService.AuthorizeByGUID(c.Request.Context(), req.GUID, ua, inet)
+
+	if err != nil {
+		h.logger.Printf("Failed to authorize user: %v\n", err)
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	c.JSON(http.StatusOK, api.TokenPair{
+		AccessToken:  tokenPair.AccessToken,
+		RefreshToken: tokenPair.RefreshToken,
+	})
 }
